# mcp-wakapi

./: .gitignore  LICENSE.md  README.md  default.nix  flake.nix  main.py  pyproject.toml  pytest.ini
src/: __init__.py  mcp_server.py  mcp_test_client.py  wakapi_client.py
src/mcp_tools/: __init__.py  all_time.py  base.py  connection.py  dependency_injection.py  leaders.py  project_detail.py  projects.py  recent_logs.py  stats.py  user_agents.py  users.py
src/wakapi_sdk/: client.py
src/wakapi_sdk/core/: __init__.py  config.py  exceptions.py  logging.py  models.py
src/wakapi_sdk/tests/unit/: test_wakapi_client.py
tests/integration/: conftest.py  test_error_handling.py  test_server_startup.py  test_tool_calls.py
tests/unit/: conftest.py  test_all_time.py  test_connection.py  test_dependency_injection.py  test_leaders.py  test_mcp_server.py  test_projects.py  test_recent_logs.py  test_stats.py  test_user_agents.py  test_users.py
wakapi_sdk_project/: LICENSE.txt  README.md  default.nix  flake.nix  pyproject.toml  pytest.ini
wakapi_sdk_project/src/wakapi_sdk/: __init__.py  client.py
wakapi_sdk_project/src/wakapi_sdk/core/: config.py  models.py
wakapi_sdk_project/tests/unit/: test_wakapi_client.py
