[project]
name = "wakapi_sdk"
version = "0.1.0"
description = "SDK for interacting with Wakapi API"
authors = [
    {name = "impure0xntk", email = "219413815+impure0xntk@users.noreply.github.com"},
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "structlog",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pytest-mock>=3.15.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.hatch.build.targets.wheel]
packages = ["src/wakapi_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"